--- a/SmartHutManager/Info2.plist
+++ b/SmartHutManager/Info2.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>&quot;We use Face ID to authenticate your access to personal information securely.&quot;</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
