--- a/SmartHutManager/Info2.plist
+++ b/SmartHutManager/Info2.plist
@@ -2,11 +2,45 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSFaceIDUsageDescription</key>
-	<string>&quot;We use Face ID to authenticate your access to personal information securely.&quot;</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
-	</array>
+    <!-- Retain NSFaceIDUsageDescription from plist2 -->
+    <key>NSFaceIDUsageDescription</key>
+    <string>&quot;We use Face ID to authenticate your access to personal information securely.&quot;</string>
+    
+    <!-- Add missing keys from plist1 -->
+    <key>API_KEY</key>
+    <string>AIzaSyB0eXdMjft2vrvPMbWJN9wf1yy-48dNNGE</string>
+    <key>GCM_SENDER_ID</key>
+    <string>482208983142</string>
+    <key>PLIST_VERSION</key>
+    <string>1</string>
+    <key>BUNDLE_ID</key>
+    <string>com.SmarthutATL.SmartHutManager</string>
+    <key>PROJECT_ID</key>
+    <string>smarthutmanager</string>
+    <key>STORAGE_BUCKET</key>
+    <string>smarthutmanager.appspot.com</string>
+    <key>IS_ADS_ENABLED</key>
+    <false/>
+    <key>IS_ANALYTICS_ENABLED</key>
+    <false/>
+    <key>IS_APPINVITE_ENABLED</key>
+    <true/>
+    <key>IS_GCM_ENABLED</key>
+    <true/>
+    <key>FirebaseAppDelegateProxyEnabled</key>
+    <false/>
+    <key>FirebaseInAppMessagingAutomaticDataCollectionEnabled</key>
+    <true/>
+    <key>IS_SIGNIN_ENABLED</key>
+    <true/>
+    <key>GOOGLE_APP_ID</key>
+    <string>1:482208983142:ios:b84549187721f5ee5125a7</string>
+
+    <!-- Merge UIBackgroundModes arrays -->
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>remote-notification</string>
+        <string>fetch</string>
+    </array>
 </dict>
 </plist>
