--- a/SmartHutManager/SmartHutManager.entitlements
+++ b/SmartHutManager/SmartHutManager.entitlements
@@ -14,6 +14,7 @@
 	<array>
 		<string>CloudKit</string>
 		<string>CloudDocuments</string>
+		<string>CloudKit Sharing</string>
 	</array>
 	<key>com.apple.developer.in-app-payments</key>
 	<array>
